[gd_scene load_steps=32 format=3 uid="uid://cd3f10inl6go1"]

[ext_resource type="Script" path="res://entities/player/scripts/character_controller.gd" id="1_d776x"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://joystick/virtual_joystick.tscn" id="2_ihn7u"]
[ext_resource type="Resource" uid="uid://dnjjaypyntw1t" path="res://characters/Data/Sonic.tres" id="2_vgmuj"]
[ext_resource type="Texture2D" uid="uid://d0lgsyfp6ih8b" path="res://placeholder/sprites/fall_test.png" id="6_1gxis"]
[ext_resource type="PackedScene" uid="uid://rcihg5md8at8" path="res://entities/generic/drop_shadow.tscn" id="6_hq5fo"]
[ext_resource type="Texture2D" uid="uid://ch28y32u4kvsn" path="res://icon.svg" id="7_6jfpq"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/walking.gd" id="9_br35p"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/States.gd" id="9_xtmgv"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/Idle.gd" id="10_gwqhk"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/Jumping.gd" id="10_wmm6m"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/Trap_Sonic.gd" id="19_6icbt"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/Shot_sonic_begin.gd" id="21_a8o13"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/Shot_sonic_air.gd" id="22_1d4x2"]
[ext_resource type="PackedScene" uid="uid://c1octgd7lfarw" path="res://entities/projectile/sonic shot/sonic_shot_projectile.tscn" id="23_c3ha0"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/StateMachineNode.gd" id="32_lcb84"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/AttackState.gd" id="33_g2pqb"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/Primary_air_Sonic.gd" id="44_8bpjx"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/Double_jump_Sonic.gd" id="45_86jpm"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/HealthComponent.gd" id="50_j88x2"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/Airborne.gd" id="53_5rd1a"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/Turn_around.gd" id="55_6n0vv"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/Running_turn.gd" id="57_iejl0"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/Stopping.gd" id="57_in6yb"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/StateBehaviour.gd" id="61_pp8w4"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/Shield.gd" id="63_1f6gj"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/Heal.gd" id="64_w536g"]
[ext_resource type="Script" path="res://entities/player/StateMachine/State/Respawn.gd" id="65_3ho01"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ys213"]
points = PackedVector3Array(-0.888966, 0.833275, -0.0276714, 0.941393, 0.941393, 0.0293034, 0.888966, 0.833275, 0.0276714, 0.0293034, 0.941393, -0.941393, 0.0276811, -0.889276, -0.0276811, -0.0293034, 0.941393, 0.941393, -0.941393, 0.941393, 0.0293034, -0.0276811, -0.889276, 0.0276811, -0.0293034, 0.941393, -0.941393, 0.941393, 0.941393, -0.0293034, 0.0293034, 0.941393, 0.941393, 0.0276811, -0.889276, 0.0276811, -0.0276811, -0.889276, -0.0276811, -0.941393, 0.941393, -0.0293034, 0.0276714, 0.833275, -0.888966, -0.0276714, 0.833275, 0.888966)

[sub_resource type="CylinderMesh" id="CylinderMesh_efuxx"]
top_radius = 1.0
bottom_radius = 0.0
radial_segments = 4
rings = 1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d8gre"]
radius = 0.7

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_53g5n"]
radius = 0.7

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("current_state") groups=["Entities"]]
collision_layer = 4
script = ExtResource("1_d776x")
characterData = ExtResource("2_vgmuj")
current_state = NodePath("States/StateMachineState/Movement/Idle")

[node name="Virtual Joystick" parent="." instance=ExtResource("2_ihn7u")]
visibility_mode = 1
action_left = "left"
action_right = "right"
action_up = "up"
action_down = "down"

[node name="Sprite3D" type="Sprite3D" parent="."]
visible = false
offset = Vector2(0, 18)
pixel_size = 0.05
billboard = 1
double_sided = false
texture_filter = 2
render_priority = 1
texture = ExtResource("6_1gxis")
hframes = 4

[node name="DropShadow" parent="." instance=ExtResource("6_hq5fo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00193492, 0)
pixel_size = 0.1
double_sided = false

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="TouchScreenButton" type="TouchScreenButton" parent="Control"]
position = Vector2(-145, -126)
texture_normal = ExtResource("7_6jfpq")
action = "jump"
visibility_mode = 1

[node name="Area3D" type="Area3D" parent="." groups=["Entities"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0.5)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_ys213")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D/CollisionShape3D"]
visible = false
mesh = SubResource("CylinderMesh_efuxx")
skeleton = NodePath("../..")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
shape = SubResource("CapsuleShape3D_d8gre")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_53g5n")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("50_j88x2")
maxHealth = 100.0

[node name="States" type="Node" parent="."]
script = ExtResource("9_xtmgv")

[node name="StateMachineState" type="Node" parent="States"]
script = ExtResource("32_lcb84")

[node name="ephemeral" type="Node" parent="States/StateMachineState"]

[node name="Movement" type="Node" parent="States/StateMachineState"]

[node name="Idle" type="Node" parent="States/StateMachineState/Movement" node_paths=PackedStringArray("on_primary", "on_moved", "on_gained_air", "on_jumped", "on_turn_around", "on_shield", "on_debug_new_action")]
script = ExtResource("10_gwqhk")
on_primary = NodePath("../../Attack/Primary1")
on_moved = NodePath("../Walking")
on_gained_air = NodePath("../Airborne")
on_jumped = NodePath("../Jumping")
on_turn_around = NodePath("../Turn around")
on_shield = NodePath("../../Health/Shield")
on_debug_new_action = NodePath("../../Attack/Shot/Shot_ground")

[node name="Walking" type="Node" parent="States/StateMachineState/Movement" node_paths=PackedStringArray("on_primary", "on_gained_air", "on_jumped", "on_stopped", "on_turn_around", "on_stopped_hard", "on_shield", "on_debug_new_action")]
script = ExtResource("9_br35p")
on_primary = NodePath("../../Attack/Primary1")
on_gained_air = NodePath("../Airborne")
on_jumped = NodePath("../Jumping")
on_stopped = NodePath("../Idle")
on_turn_around = NodePath("../Turn around")
on_stopped_hard = NodePath("../Stopping")
on_shield = NodePath("../../Health/Shield")
on_debug_new_action = NodePath("../../Attack/Shot/Shot_ground")
time_till_hard_stop = 0.3
main_animation = "run"

[node name="Jumping" type="Node" parent="States/StateMachineState/Movement"]
script = ExtResource("10_wmm6m")
main_animation = "jump"

[node name="Double_jump_sonic" type="Node" parent="States/StateMachineState/Movement" node_paths=PackedStringArray("on_grounded", "on_primary", "on_timeout")]
script = ExtResource("45_86jpm")
main_animation = "Double_jump_sonic"
on_grounded = NodePath("../Idle")
on_primary = NodePath("../../Attack/Primary_air")
on_timeout = NodePath("../Airborne")
time_till_air_attack = 0.15
falloff = 0.01
initial_impulse = Vector2(20, 12)

[node name="Airborne" type="Node" parent="States/StateMachineState/Movement" node_paths=PackedStringArray("on_grounded", "on_primary", "on_double_jump", "on_debug_action")]
script = ExtResource("53_5rd1a")
on_grounded = NodePath("../Landing")
on_primary = NodePath("../../Attack/Primary_air")
on_double_jump = NodePath("../Double_jump_sonic")
on_debug_action = NodePath("../../Attack/Shot/Shot_air")
time_till_air_action = 0.15
main_animation = "Airborne"

[node name="Turn around" type="Node" parent="States/StateMachineState/Movement" node_paths=PackedStringArray("on_primary", "on_gained_air", "on_jumped", "on_stopped", "on_timed_out")]
script = ExtResource("55_6n0vv")
on_primary = NodePath("../../Attack/Primary1")
on_gained_air = NodePath("../Airborne")
on_jumped = NodePath("../Jumping")
on_stopped = NodePath("../Idle")
on_timed_out = NodePath("../Walking")
lifetime = 0.26
main_animation = "Turn around"

[node name="Stopping" type="Node" parent="States/StateMachineState/Movement" node_paths=PackedStringArray("on_primary", "on_moved", "on_gained_air", "on_jumped", "on_turn_around", "on_timeout")]
script = ExtResource("57_in6yb")
on_primary = NodePath("../../Attack/Primary1")
on_moved = NodePath("../Walking")
on_gained_air = NodePath("../Airborne")
on_jumped = NodePath("../Jumping")
on_turn_around = NodePath("../Running turn")
on_timeout = NodePath("../Idle")
lifetime = 0.2

[node name="Running turn" type="Node" parent="States/StateMachineState/Movement" node_paths=PackedStringArray("on_primary", "on_gained_air", "on_jumped", "on_stopped", "on_timed_out")]
script = ExtResource("57_iejl0")
on_primary = NodePath("../../Attack/Primary1")
on_gained_air = NodePath("../Airborne")
on_jumped = NodePath("../Jumping")
on_stopped = NodePath("../Idle")
on_timed_out = NodePath("../Walking")
lifetime = 0.26
main_animation = "Running_turn"

[node name="Landing" type="Node" parent="States/StateMachineState/Movement" node_paths=PackedStringArray("on_primary", "on_moved", "on_gained_air", "on_jumped", "on_turn_around", "on_timeout")]
script = ExtResource("57_in6yb")
on_primary = NodePath("../../Attack/Primary1")
on_moved = NodePath("../Walking")
on_gained_air = NodePath("../Airborne")
on_jumped = NodePath("../Jumping")
on_turn_around = NodePath("../Running turn")
on_timeout = NodePath("../Idle")
lifetime = 0.15
main_animation = "Landing"

[node name="Attack" type="Node" parent="States/StateMachineState"]

[node name="Primary1" type="Node" parent="States/StateMachineState/Attack" node_paths=PackedStringArray("on_primary", "on_gained_air", "on_timed_out")]
script = ExtResource("33_g2pqb")
on_primary = NodePath("../Primary2")
on_gained_air = NodePath("../../Movement/Jumping")
on_timed_out = NodePath("../../Movement/Idle")
main_animation = "Primary1"
frame_times = Array[float]([0.03333, 0.06666, 0.1333, 0.2])
time_till_next_hit_allowed = 0.03
lifetime = 0.233

[node name="Primary2" type="Node" parent="States/StateMachineState/Attack" node_paths=PackedStringArray("on_primary", "on_gained_air", "on_timed_out")]
script = ExtResource("33_g2pqb")
on_primary = NodePath("../Primary3")
on_gained_air = NodePath("../../Movement/Jumping")
on_timed_out = NodePath("../../Movement/Idle")
main_animation = "Primary2"
frame_times = Array[float]([0.03333, 0.06666, 0.1333, 0.2])
time_till_next_hit_allowed = 0.03
lifetime = 0.233

[node name="Primary3" type="Node" parent="States/StateMachineState/Attack" node_paths=PackedStringArray("on_primary", "on_gained_air", "on_timed_out")]
script = ExtResource("33_g2pqb")
on_primary = NodePath("../Primary4")
on_gained_air = NodePath("../../Movement/Jumping")
on_timed_out = NodePath("../../Movement/Idle")
main_animation = "Primary3"
frame_times = Array[float]([0.03333, 0.06666, 0.1333, 0.2, 0.23333, 0.3, 0.4])
time_till_next_hit_allowed = 0.03
lifetime = 0.42

[node name="Primary4" type="Node" parent="States/StateMachineState/Attack" node_paths=PackedStringArray("on_primary", "on_gained_air", "on_timed_out")]
script = ExtResource("33_g2pqb")
on_primary = NodePath("../../Movement/Idle")
on_gained_air = NodePath("../../Movement/Jumping")
on_timed_out = NodePath("../../Movement/Idle")
main_animation = "Primary4"
frame_times = Array[float]([0.03333, 0.06666, 0.1333, 0.2, 0.26666, 0.333333, 0.36666, 0.416666, 0.45, 0.466666, 0.633333, 0.8, 0.9])
time_till_next_hit_allowed = 0.1
lifetime = 0.983333

[node name="Trap" type="Node" parent="States/StateMachineState/Attack" node_paths=PackedStringArray("on_primary", "on_gained_air", "on_timed_out", "cooldown_object")]
script = ExtResource("19_6icbt")
on_primary = NodePath("../../Movement/Idle")
on_gained_air = NodePath("../../Movement/Airborne")
on_timed_out = NodePath("../../Movement/Idle")
main_animation = "trap_ground"
trap_spawn_position = Vector3(0.3, 0.25, 0)
time_till_next_hit_allowed = 0.2
lifetime = 0.323
cooldown_object = NodePath("trap move cooldown timer")

[node name="trap move cooldown timer" type="Timer" parent="States/StateMachineState/Attack/Trap"]
process_callback = 0
one_shot = true
autostart = true

[node name="Primary_air" type="Node" parent="States/StateMachineState/Attack" node_paths=PackedStringArray("on_primary", "on_timed_out", "on_touching_floor")]
script = ExtResource("44_8bpjx")
on_primary = NodePath(".")
on_timed_out = NodePath("../../Movement/Airborne")
on_touching_floor = NodePath("../../Movement/Idle")

[node name="Trap_air" type="Node" parent="States/StateMachineState/Attack" node_paths=PackedStringArray("on_primary", "on_gained_air", "on_timed_out", "cooldown_object")]
script = ExtResource("19_6icbt")
on_primary = NodePath("../../Movement/Idle")
on_gained_air = NodePath("../../Movement/Airborne")
on_timed_out = NodePath("../../Movement/Idle")
main_animation = "trap_air"
trap_spawn_position = Vector3(0, -0.2, 0)
time_till_next_hit_allowed = 0.2
lifetime = 0.323
cooldown_object = NodePath("../Trap/trap move cooldown timer")

[node name="Shot" type="Node" parent="States/StateMachineState/Attack"]

[node name="Shot_ground" type="Node" parent="States/StateMachineState/Attack/Shot" node_paths=PackedStringArray("on_timed_out", "cooldown_object")]
script = ExtResource("21_a8o13")
on_timed_out = NodePath("../Shot_air")
animation_right = "shot ground right"
animation_up = "shot ground up"
animation_down = "shot ground down"
lifetime = 0.36
cooldown_object = NodePath("../shot move cooldown timer")

[node name="shot move cooldown timer" type="Timer" parent="States/StateMachineState/Attack/Shot"]
process_callback = 0
one_shot = true
autostart = true

[node name="Shot_air" type="Node" parent="States/StateMachineState/Attack/Shot" node_paths=PackedStringArray("on_timed_out", "cooldown_object")]
script = ExtResource("22_1d4x2")
on_timed_out = NodePath("../../../Movement/Idle")
animation_right = "shot air right"
animation_up = "shot air up"
animation_down = "shot air down"
projectile = ExtResource("23_c3ha0")
vertical_impulse = 13.0
horizontal_impulse = 10.0
lifetime = 0.36
cooldown_object = NodePath("../shot move cooldown timer")

[node name="Health" type="Node" parent="States/StateMachineState"]

[node name="Shield" type="Node" parent="States/StateMachineState/Health" node_paths=PackedStringArray("on_input_stopped", "on_movement_detected", "on_primary", "on_jump_input", "on_timer_expiration", "on_turn_around")]
script = ExtResource("63_1f6gj")
time_till_heal = 0.35
on_input_stopped = NodePath("../../Movement/Idle")
on_movement_detected = NodePath("../../Movement/Walking")
on_primary = NodePath("../../Attack/Primary1")
on_jump_input = NodePath("../../Movement/Jumping")
on_timer_expiration = NodePath("../Heal")
on_turn_around = NodePath("../../Movement/Turn around")
main_animation = "guard"

[node name="Timer" type="Timer" parent="States/StateMachineState/Health/Shield"]
wait_time = 0.504
one_shot = true

[node name="Heal" type="Node" parent="States/StateMachineState/Health" node_paths=PackedStringArray("health_component", "on_idle")]
script = ExtResource("64_w536g")
health_component = NodePath("../../../../HealthComponent")
on_idle = NodePath("../../Movement/Idle")
main_animation = "heal_loop"
regenRate = 0.25

[node name="Respawn" type="Node" parent="States/StateMachineState/Health" node_paths=PackedStringArray("deathRay", "deathCursor")]
script = ExtResource("65_3ho01")
deathRay = NodePath("../../../../DeathRay")
deathCursor = NodePath("../../../../DeathCursor")

[node name="StateBehaviour" type="Node" parent="States"]
script = ExtResource("61_pp8w4")

[node name="DeathRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 23.877, 0)
target_position = Vector3(0, -50, 0)

[node name="DeathCursor" type="Node3D" parent="."]
visible = false

[node name="Sprite3D" type="Sprite3D" parent="DeathCursor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.829943, 0)
billboard = 1
texture = ExtResource("7_6jfpq")

[node name="CameraPivot" type="Node3D" parent="."]

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="timeout" from="States/StateMachineState/Health/Shield/Timer" to="States/StateMachineState/Health/Shield" method="_on_timer_timeout"]
